workshop/bookinfo/1.0/servicemesh-core/bookinfo-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gw
  namespace: bookinfo
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    hostname: "bookinfo.apps.snoaxolab.axodevelopment.dev"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo-ingress
  namespace: bookinfo
spec:
  parentRefs:
  - name: bookinfo-gw
    namespace: bookinfo
  hostnames:
  - "bookinfo.apps.snoaxolab.axodevelopment.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /productpage
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: Exact
        value: /login
    - path:
        type: Exact
        value: /logout
    - path:
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - name: productpage
      port: 9080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-gw
  namespace: bookinfo
spec:
  host: bookinfo.apps.snoaxolab.axodevelopment.dev
  port:
    targetPort: 80
  to:
    kind: Service
    name: bookinfo-gw-istio
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
